--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -13,10 +13,15 @@
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.9",
     "jwt-decode": "^4.0.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
-    "react-router-dom": "^6.28.1"
+    "react-router-dom": "^6.28.1",
+    "react-social-login-buttons": "^4.1.0",
+    "reactjs-social-login": "^2.6.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
